// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminEmails /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD outer"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with emails 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD outer"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dmRaPn bsyMtp admin-analytics__count"
  >
    Showing 
    3
     of 
    3
     emails
  </span>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-fLlhyt gUuuPa admin-emails__card"
          href="/admin/emails?highlight=1"
          id="1"
        >
          <div
            class="sc-bBrHrO kKyHOq"
          >
            <div
              class="sc-ivTmOn jdfdye"
            />
            <div
              class="sc-cxabCf eoTWlP"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="email-1"
                  >
                    Email 1
                  </h1>
                  <span
                    class="sc-dmRaPn bsyMtp"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-fLlhyt gUuuPa admin-emails__card"
          href="/admin/emails?highlight=2"
          id="2"
        >
          <div
            class="sc-bBrHrO kKyHOq"
          >
            <div
              class="sc-ivTmOn jdfdye"
            />
            <div
              class="sc-cxabCf eoTWlP"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="email-2"
                  >
                    Email 2
                  </h1>
                  <span
                    class="sc-dmRaPn bsyMtp"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-fLlhyt gUuuPa admin-emails__card"
          href="/admin/emails?highlight=3"
          id="3"
        >
          <div
            class="sc-bBrHrO kKyHOq"
          >
            <div
              class="sc-ivTmOn jdfdye"
            />
            <div
              class="sc-cxabCf eoTWlP"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="email-3"
                  >
                    Email 3
                  </h1>
                  <span
                    class="sc-dmRaPn bsyMtp"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD outer"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dmRaPn bsyMtp"
  >
    <span
      class="sc-llJcti gTNJdJ"
    >
      Could not load emails
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL kQkTFv outer"
      disabled=""
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR dQEKTW"
      >
        Reload emails
      </span>
      <div
        aria-hidden="true"
        class="sc-hHLeRK dAWrmh"
      >
        <div
          class="sc-fnykZs gCEWdg"
        >
          <div
            class="sc-fEOsli lkTqOy"
          />
          <div
            class="sc-fEOsli dxKqkG"
          />
          <div
            class="sc-fEOsli dGpXuh"
          />
          <div
            class="sc-fEOsli cIgRdg"
          />
          <div
            class="sc-fEOsli gZzohb"
          />
          <div
            class="sc-fEOsli zmfC"
          />
          <div
            class="sc-fEOsli gacaki"
          />
          <div
            class="sc-fEOsli cIrbJy"
          />
        </div>
      </div>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resendError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD outer"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resending=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin emails
    </h1>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD outer"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-emails__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dmRaPn bsyMtp"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
